# ytani_TcpCmd

./: .gitignore  README.md  entry_points.cfg  install.sh  setup.cfg
example/: cmd1.py
ytani_tcpcmd/: __init__.py  __main__.py  client.py  my_logger.py  server.py  tcpcmd.py
