[metadata]
name = ytani_tcpcmd
version = attr: ytani_tcpcmd.__version__
author = Yoichi Tanibayashi
author_email = yoichi@tanibayashi.jp
description = ytani_tcpcmd: TCP Command Server and Client Library
long_description = file: README.md
url = https://github.com/ytani01/ytani_TcpCmd.git
license = MIT
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    
[options]
zip_safe = False
packages = find:
install_requires =
    click
entry_points = file: entry_points.cfg
